Minor fixes and align detail image to top of grid box

--- a/src/styles/PicSlider.css
+++ b/src/styles/PicSlider.css
@@ -1,4 +1,4 @@
-.PicSlider.SVGImg-container {
+.PicSlider .SVGImg {
   background-color: black;
   border: solid;
   border-color:darkslateblue;
